* ENHANCED: PceEmacs Prolog mode \C-l only to re-colour the buffer if
  it was modified.

* ADDED: Mode help for Prolog mode in PceEmacs

* FIXED: Some problems in `text_buffer<-skip_comment', operating backwards.

* ENHANCED: Various Prolog Mode layout problems if there is comment in the
  clause. 

VERSION 5.1.1
=============

* ENHANCED: User Guide

* ADDED: plot library

* UPDATED: The XPCE/Prolog User Guide.  Please check the home-page.

* ENHANCED: Win32: Use same bitmap-scaling as the X11 version.  This produces
  much better results than the MS BitBlt() operations.

* FIXED: Win32: Various issues in colour-handling.  Properly distinguish
  between palette usage and direct RGB, fixing colour distortion on
  high- and true-colour displays and added proper colormap support to
  the windows port of XPM 3.4k.


VERSION 5.1.0
=============

* LICENCE: GPL-2

* Integrated with SWI-Prolog 4.0.0 package building schema.

* FIXED: Avoid crash in Postscript generation from text-objects containing
  non-ISO characters.  Thanks to Matthias Trautner Kromann.

* INSTALL: Added NMAKE makefiles for building and installing in Windows.

* ADDED: SWI-Prolog GUI tracer to standard installation for SWI-Prolog.

VERSION 5.0.11
==============

* FIXED: PceEmacs: Prolog colourising could get into a loop.

* ADDED: Support for writing .GIF files

* ADDED: `date->advance', moving date objects forwards and backward
  in time.

* ADDED: `char_array <-base64_encode' and <-base64_decode supporting
  rfc-2045 conform base-64 encoding and decoding.

* FIXED: Crash in `graphical <-abolute_position' if the receiving
  graphical is not displayed on the provided device (now fails).

* ADDED: `pixmap <-convert' to deal with graphicals and files.  Graphicals
  used to be indirected over class image, resulting in a black-and-white
  pixmap after an unnecessary and expensive intermediate conversion. 

* MODIFIED: PceEmacs Prolog mode never to move the caret on automatic